src/objects/Agency_Campaign_Brand__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Campaign__c</fullName>
        <label>Agency Campaign</label>
        <referenceTo>Agency_Campaign__c</referenceTo>
        <relationshipName>Agency_Campaign_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <label>Brand Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agency_Campaign_Brands</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Prospect</label>
        <type>Checkbox</type>
    </fields>
    <label>OLD - Agency Campaign Brand</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Agency Campaign Brand Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Campaign Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>